derive_builder/tests/compile-fail/builder_field_custom.stderr
error: #[builder(default)] and #[builder(field(build="..."))] cannot be used together
 --> tests/compile-fail/builder_field_custom.rs:8:19
  |
8 |         default = "1",
  |                   ^^^

error: duplicate field - `type` is a deprecated alias for `ty`.
  --> tests/compile-fail/builder_field_custom.rs:15:35
   |
15 |     #[builder(field(ty = "usize", type = "usize"))]
   |                                   ^^^^

error: #[builder(default)] and #[builder(field(type="..."))] cannot be used together
  --> tests/compile-fail/builder_field_custom.rs:19:25
   |
19 |     #[builder(default = "2", field(ty = "usize"))]
   |                         ^^^

error: #[builder(default)] and #[builder(field(build="..."))] cannot be used together
  --> tests/compile-fail/builder_field_custom.rs:23:25
   |
23 |     #[builder(default = "3", field(ty = "usize", build = "self.ipsum + 42"))]
   |                         ^^^

error: #[builder(default)] and #[builder(field(type="..."))] cannot be used together
  --> tests/compile-fail/builder_field_custom.rs:23:25
   |
23 |     #[builder(default = "3", field(ty = "usize", build = "self.ipsum + 42"))]
   |                         ^^^
